--- a/index.html
+++ b/index.html
@@ -15,8 +15,21 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
-<body class="m-0 p-0 box-border flex  justify-center h-screen">
-  <h1 class="text-3xl text-gray-600 py-20 px-10">Reliable, efficient delivery</h1>
+<body >
+  <main class="m-0 p-0 box-border justify-center items-center h-500px px-10">
+    <div class="justify-center items-center">
+      <div class="text-3xl text-gray-600 text-center pl-2">
+        Reliable, efficient delivery
+      </div>
+      <div class="text-3xl text-gray-900 font-black self-center mt-10">
+        Powered by Technology
+      </div>
+      <div>Our Artificial Intelligence powered tools use millions of project is successful</div>
+    </div>
+  </main>
+  
+
+
   
   
   
