--- a/index.html
+++ b/index.html
@@ -18,13 +18,24 @@
 <body >
   <main class="m-0 p-0 box-border justify-center items-center h-500px px-10">
     <div class="justify-center items-center">
-      <div class="text-3xl text-gray-600 text-center pl-2">
+      <div class="text-3xl text-gray-600 text-center mt-20">
         Reliable, efficient delivery
       </div>
-      <div class="text-3xl text-gray-900 font-black self-center mt-10">
+      <div class="text-[30px] text-gray-900 font-bold text-center ">
         Powered by Technology
       </div>
-      <div>Our Artificial Intelligence powered tools use millions of project is successful</div>
+        <div class="text-center text-[20px] text-gray-500 mt-5">
+        Our Artificial Intelligence powered tools
+         use millions of project data points to
+          ensure that you project is successful
+        </div>
+    </div>
+
+    <div class="card">
+      
+
+
+
     </div>
   </main>
   
